5.advanced-abstractions/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
spec:
  selector:
    matchLabels:
      app.gb: prometheus
  serviceName: "prometheus"
  replicas: 1 
  # minReadySeconds: 10 # by default is 0
  template:
    metadata:
      labels:
        app.gb: prometheus 
    spec:
      terminationGracePeriodSeconds: 10
      serviceAccount: prometheus
      containers:
      - name: prometheus
        image: prom/prometheus:v2.19.2
        ports:
        - name: web-prometheus
          containerPort: 9090
          protocol: TCP
        volumeMounts:
        - name: prometheus-data
          mountPath: /prometheus
        - name: prometheus-config
          mountPath: /etc/prometheus
      volumes:
      - name: prometheus-config
        configMap:
          name: prometheus-conf
  volumeClaimTemplates:
  - metadata:
      name: prometheus-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: csi-ceph-hdd-gz1-retain
      resources:
        requests:
          storage: 5Gi
