5.advanced-abstractions/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  labels:
    app.gb: prometheus
spec:
  type: ClusterIP
  ports:
    - port: 9090
      targetPort: 9090
      protocol: TCP
  selector:
    app.gb: prometheus
