5.advanced-abstractions/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: prometheus.185.130.114.152.nip.io     
    http:
      paths:
        - path: /(.*)
          pathType: Prefix
          backend: 
            service:
              name: prometheus
              port:
                number: 9090
